# pratyaksa

./: .env.example  .example.docker-compose.yml  .gitignore  API_TESTING.md  README.md  docker-compose.yml  package.json
backend_rust/: .env  Cargo.toml  Dockerfile
backend_rust/migrations/: 20240101000001_create_users.sql  20240101000002_create_jenis_alat_berat.sql  20240101000003_create_unit_tambang.sql  20240101000004_create_sensor_telemetry.sql  20240101000005_seed_more_units.sql  20240101000006_add_unit_coordinates.sql  20240101000007_set_real_models.sql  20240101000008_create_work_orders.sql
backend_rust/src/: config.rs  errors.rs  main.rs
backend_rust/src/db/: mongo.rs  postgres.rs
backend_rust/src/middleware/: auth.rs
backend_rust/src/models/: analisa.rs  auth.rs  jenis_alat_berat.rs  live.rs  mod.rs  telemetry.rs  unit_tambang.rs  work_order.rs
backend_rust/src/pratyaksa/: mod.rs  models.rs  sync.rs
backend_rust/src/routes/: analisa.rs  auth.rs  dashboard.rs  health_analytics.rs  jenis_alat_berat.rs  live.rs  mod.rs  pratyaksa.rs  telemetry.rs  unit_tambang.rs  work_order.rs
frontend_nuxt/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend_nuxt/app/: app.vue
frontend_nuxt/app/assets/css/: animations.css
frontend_nuxt/app/components/: AppLogo.vue  ModeLockTabel.vue  ModeSelector.vue  PanelSidebar.vue
frontend_nuxt/app/composables/: useApi.ts  useAuth.ts  useCountUp.ts  useFleetMap.ts  useModels.ts  usePratyaksa.ts  useTheme.ts
frontend_nuxt/app/pages/: index.vue
frontend_nuxt/app/pages/account/: login.vue  register.vue
frontend_nuxt/app/pages/panel/: analisa.vue  dashboard.vue  jenis_alat_berat.vue  unit_tambang.vue  work_order.vue
frontend_nuxt/app/plugins/: reveal.ts  tilt.ts
frontend_nuxt/server/api/: upload-model.post.ts
nginx/: nginx.conf
telegram_bot_grpc/: .env.example  Cargo.toml  Dockerfile  build.rs
telegram_bot_grpc/proto/: alert.proto
telegram_bot_grpc/src/: main.rs
test/: test_live_api.sh
(+3 files in other folders)
