[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend_rust"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.9.0"
actix-cors = "0.7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# MongoDB
mongodb = { version = "3.1", default-features = true }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# JWT
jsonwebtoken = "9.3"

# Bcrypt
bcrypt = "0.16"

# Environment variables
dotenvy = "0.15"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Futures utilities
futures = "0.3"

# HTTP client (for PRATYAKSA API polling)
reqwest = { version = "0.12", features = ["json"] }

# Async Mutex
parking_lot = "0.12"
